# photo2cricut

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
docs/superpowers/plans/: 2026-06-29-photo2coloringbook-phase1.md  2026-06-29-photo2coloringbook-phase2.md
docs/superpowers/specs/: 2026-06-29-photo2coloringbook-design.md
photo2coloringbook/: __init__.py  book.py  cli.py  ingest.py  isolate.py  layout.py  pipeline.py  post.py
photo2coloringbook/stylize/: __init__.py  base.py  contour.py  cv.py
photo2cricut/: __init__.py  cli.py  pipeline.py  testimage.py  validate.py
scripts/: make_test_image.py  setup-appserver.sh
tests/: conftest.py  test_pipeline.py
tests/coloringbook/: test_book.py  test_cli.py  test_contour.py  test_ingest.py  test_isolate.py  test_layout.py  test_package.py  test_pipeline.py  test_post.py  test_stylize.py
