[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "photo2cricut"
version = "0.2.0"
description = "Turn JPG photos into Cricut-ready single-line (centerline) SVG line art."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "YOUR NAME" }]
keywords = ["cricut", "pen-plotter", "svg", "line-art", "vectorize", "centerline"]
dependencies = [
    "numpy>=1.23",
    "opencv-python-headless>=4.7",
    "scikit-image>=0.20",
    "sknw>=0.15",
    "vpype>=1.14",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "cairosvg>=2.5", "pypdf>=4.0", "reportlab>=4.0", "Pillow>=10.1"]
coloringbook = ["reportlab>=4.0", "Pillow>=10.1"]
gpu = ["torch", "torchvision", "rembg", "onnxruntime"]  # Phase 2 backend

[project.scripts]
photo2cricut = "photo2cricut.cli:main"
photo2cricut-validate = "photo2cricut.validate:main"
photo2cricut-makeimg = "photo2cricut.testimage:main"
photo2coloringbook = "photo2coloringbook.cli:main"

[tool.setuptools]
packages = ["photo2cricut", "photo2coloringbook", "photo2coloringbook.stylize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
